--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netfilx",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://Dahyeonni.github.io/React_Netflix-clone",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
@@ -10,6 +11,7 @@
     "movie-trailer": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.3.2",
     "web-vitals": "2.1.4"
@@ -18,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
